color changed for .bar

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ body {
 .bar {
     width: 25px;
     height: 3px;
-    background-color: black;
+    background-color:#969696;
     margin: 4px 0;
 }
 /* end of responsive */
